--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -45,6 +46,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.0.2"
   }
 }
